test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/2_modifier/storage/static/MISSING_STATIC_INIT.t
class QWE
{
    @static_test { expect_message={ level="LEVEL_ERROR", id="MISSING_STATIC_INIT" } }
    static var x:uint32;
}
